# emberstream

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: mqtt_publisher.py  seed_telemetry.py
src/emberstream/: __init__.py  config.py  db.py  main.py  models.py
src/emberstream/routers/: health.py  query.py  telemetry.py  ws.py
src/emberstream/services/: broadcast.py  embeddings.py  ingest.py  rag.py  stream.py
src/emberstream/utils/: logging.py  metrics.py
tests/: conftest.py  test_broadcaster.py  test_embeddings.py  test_models.py  test_openapi.py
