[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emberstream"
version = "0.1.0"
description = "Real-time telemetry platform with a natural-language query layer."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Michael Opoku-Gyimah"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "httpx>=0.27",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "boto3>=1.34",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "websockets>=12.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-redis",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]
"scripts/*" = ["S"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
